--- a/SMRT/SMRT/SMRT/templates/index.html
+++ b/SMRT/SMRT/SMRT/templates/index.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+<meta http-equiv="refresh" content="3600"/>
+
 <head>
     <script>
 function startTime() {
@@ -11,8 +13,7 @@ function startTime() {
     var s = today.getSeconds();
     m = checkTime(m);
     s = checkTime(s);
-    document.getElementById('txt').innerHTML =
-    h + ":" + m + ":" + s;
+    document.getElementById('txt').innerHTML = h + ":" + m + ":" + s;
     var t = setTimeout(startTime, 500);
 }
 function checkTime(i) {
@@ -23,16 +24,14 @@ function checkTime(i) {
 </head>
 
 <body onload="startTime()" style="background-color:black;">
-    <div class="clock" id="txt">
-    </div>
-    <div class="clock col-md-6">
-        <h1>Wolololo</h1>
-        <h1>{{weather}}</h1>
-    </div>
 
     <div class="clock col-md-6">
-        <h1>Wolololo</h1>
-        <h1>{{weather}}</h1>
+        <tl>
+            <div class="clock" id="txt"></div>
+        </tl>
+        <tright>Location set to {{location}}</tright>
+        <bl>{{message}}</bl>
+        <bright>{{weather}}</bright>
     </div>
 
 </body>
